--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Invest in the Malaysian Financial Markets">
 <link rel="shortcut icon" href="favicon.ico">
-    <link href="./Important Stuff/loader-typing.css" rel="stylesheet" type="text/css" media="all">
-    <link href="./Important Stuff/theme-coworking.css" rel="stylesheet" type="text/css" media="all">
-    <link href="./Important Stuff/custom.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="preload" as="font" href="./Important Stuff/fonts/Inter-UI-upright.var.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" as="font" href="./Important Stuff/fonts/Inter-UI.var.woff2" type="font/woff2" crossorigin="anonymous">
+    <link href="Important Stuff/loader-typing.css" rel="stylesheet" type="text/css" media="all">
+    <link href="Important Stuff/theme-coworking.css" rel="stylesheet" type="text/css" media="all">
+    <link href="Important Stuff/custom.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="preload" as="font" href="Important Stuff/fonts/Inter-UI-upright.var.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="Important Stuff/fonts/Inter-UI.var.woff2" type="font/woff2" crossorigin="anonymous">
   
 
   
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark" data-overlay="" data-sticky="top" style="max-width: 1903px; top: 0px;">
         <div class="container col">
           <div class="px-1 col-6 col-sm-5 col-md-4 col-lg-3 col-xl-3">
-            <img src="./Important Stuff/bnm_logo_L.png" alt="BNM Logo">
+            <img src="Important Stuff/bnm_logo_L.png" alt="BNM Logo">
           </div>
 
           <button class="navbar-toggler order-last" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -592,40 +592,40 @@
 </svg>
     </a>
     <!-- Required vendor scripts (Do not remove) -->
-    <script type="text/javascript" src="./Important Stuff/jquery.min.js.download"></script>
-    <script type="text/javascript" src="./Important Stuff/popper.min.js.download"></script>
-    <script type="text/javascript" src="./Important Stuff/bootstrap.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/jquery.min.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/popper.min.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/bootstrap.js.download"></script>
 
     <!-- Optional Vendor Scripts (Remove the plugin script here and comment initializer script out of index.js if site does not use that feature) -->
 
     <!-- Flatpickr (calendar/date/time picker UI) -->
-    <script type="text/javascript" src="./Important Stuff/flatpickr.min.js.download"></script> 
+    <script type="text/javascript" src="Important Stuff/flatpickr.min.js.download"></script> 
     <!-- Flickity (handles touch enabled carousels and sliders) -->
-    <script type="text/javascript" src="./Important Stuff/flickity.pkgd.min.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/flickity.pkgd.min.js.download"></script>
     <!-- Isotope (masonry layouts and filtering) -->
-    <script type="text/javascript" src="./Important Stuff/isotope.pkgd.min.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/isotope.pkgd.min.js.download"></script>
     <!-- jarallax (parallax effect and video backgrounds) -->
-    <script type="text/javascript" src="./Important Stuff/jarallax.min.js.download"></script>
-    <script type="text/javascript" src="./Important Stuff/jarallax-video.min.js.download"></script>
-    <script type="text/javascript" src="./Important Stuff/jarallax-element.min.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/jarallax.min.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/jarallax-video.min.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/jarallax-element.min.js.download"></script>
     <!-- AOS (Animate On Scroll - animates elements into view while scrolling down) -->
-    <script type="text/javascript" src="./Important Stuff/aos.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/aos.js.download"></script>
     <!-- Ion rangeSlider (flexible and pretty range slider elements) -->
-    <script type="text/javascript" src="./Important Stuff/ion.rangeSlider.min.js.download"></script> 
+    <script type="text/javascript" src="Important Stuff/ion.rangeSlider.min.js.download"></script> 
     <!-- jQuery Countdown (displays countdown text to a specified date) -->
-    <script type="text/javascript" src="./Important Stuff/jquery.countdown.min.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/jquery.countdown.min.js.download"></script>
     <!-- ScrollMonitor (manages events for elements scrolling in and out of view) -->
-    <script type="text/javascript" src="./Important Stuff/scrollMonitor.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/scrollMonitor.js.download"></script>
     <!-- SVGInjector (replaces img tags with SVG code to allow easy inclusion of SVGs with the benefit of inheriting colors and styles)-->
-    <script type="text/javascript" src="./Important Stuff/svg-injector.umd.production.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/svg-injector.umd.production.js.download"></script>
     <!-- Smooth scroll (animation to links in-page)-->
-    <script type="text/javascript" src="./Important Stuff/smooth-scroll.polyfills.min.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/smooth-scroll.polyfills.min.js.download"></script>
     <!-- Plyr (unified player for Video, Audio, Vimeo and Youtube) -->
-    <script type="text/javascript" src="./Important Stuff/plyr.polyfilled.min.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/plyr.polyfilled.min.js.download"></script>
     <!-- Prism (displays formatted code boxes) -->
-    <script type="text/javascript" src="./Important Stuff/prism.js.download"></script> 
+    <script type="text/javascript" src="Important Stuff/prism.js.download"></script> 
     <!-- Required theme scripts (Do not remove) -->
-    <script type="text/javascript" src="./Important Stuff/theme.js.download"></script>
+    <script type="text/javascript" src="Important Stuff/theme.js.download"></script>
     <!-- Removes page load animation when window is finished loading -->
     <script type="text/javascript">
       window.addEventListener("load", function () {    document.querySelector('body').classList.add('loaded');  });
@@ -643,7 +643,7 @@
     <!-- Typed text (animated typing effect)-->
 <!--    <script type="text/javascript" src="../2020//o/finmkt/js/typed.min.js"></script>-->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async="" src="./Important Stuff/js"></script>
+<script async="" src="Important Stuff/js"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
