--- a/FAQ.html
+++ b/FAQ.html
@@ -522,7 +522,7 @@
                   <p class="mb-0">
                     <div class="panel-body toggle-content fusion-clearfix">
                       <p><span style="font-size: 11.0pt;"><div class="panel-body toggle-content fusion-clearfix">
-                        <p>You can refer to <u><a href="/Users/fdamer/Desktop/amer6693.github.io/Regulations.html">BNM’s website</a></u> for a comprehensive list of regulated activities</p>
+                        <p>You can refer to <u><a href="https://amer6693.github.io/Regulations.html">BNM’s website</a></u> for a comprehensive list of regulated activities</p>
                         </div></p>
                       </div>                   
                      </p>
@@ -706,7 +706,7 @@
             <h5>Useful Links</h5>
             <ul class="nav flex-column">
               <li class="nav-item ">
-                <a href="https://amer6693.github.io/About page.html" target ="_blank" class="text-wrap nav-link">About BNM's Fintech Sandbox</a>
+                <a href="https://amer6693.github.io/About.html" target ="_blank" class="text-wrap nav-link">About BNM's Fintech Sandbox</a>
               </li>
 
               <li class="nav-item ">
