--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </li>
 
                 <li class="nav-item ">
-                  <a href="https://amer6693.github.io/About page.html" target="_blank" class="text-wrap nav-link">About</a>
+                  <a href="https://amer6693.github.io/About.html" target="_blank" class="text-wrap nav-link">About</a>
                 </li>
 
                 <li class="nav-item ">
@@ -425,7 +425,7 @@
             <h5>Useful Links</h5>
             <ul class="nav flex-column">
               <li class="nav-item ">
-                <a href="https://amer6693.github.io/About page.html" target ="_blank" class="text-wrap nav-link">About BNM's Sandbox</a>
+                <a href="https://amer6693.github.io/About.html" target ="_blank" class="text-wrap nav-link">About BNM's Sandbox</a>
               </li>
 
               <li class="nav-item ">
