--- a/About.html
+++ b/About.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About the Sandbox">
 <link rel="shortcut icon" href="favicon.ico" />
-    <link href="https://amer6693.github.io/https://amer6693.github.io/about page/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="https://amer6693.github.io/https://amer6693.github.io/about page/css/theme-coworking.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="https://amer6693.github.io/https://amer6693.github.io/about page/css/custom.css" rel="stylesheet" type="text/css" media="all" />
-    <link rel="preload" as="font" href="https://amer6693.github.io/https://amer6693.github.io/about page/fonts/Inter-UI-upright.var.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" as="font" href="https://amer6693.github.io/https://amer6693.github.io/about page/fonts/Inter-UI.var.woff2" type="font/woff2" crossorigin="anonymous">
+    <link href="https://amer6693.github.io/about page/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://amer6693.github.io/about page/css/theme-coworking.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://amer6693.github.io/about page/css/custom.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="preload" as="font" href="https://amer6693.github.io/about page/fonts/Inter-UI-upright.var.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="https://amer6693.github.io/about page/fonts/Inter-UI.var.woff2" type="font/woff2" crossorigin="anonymous">
   </head>
 
   <body data-smooth-scroll-offset="73">
