--- a/Guidance.html
+++ b/Guidance.html
@@ -92,10 +92,10 @@
 
  
         <div class="divider">
-        <img class="bg-primary-alt" src="https://amer6693.github.io/images/dividers/divider-1.svg" alt="graphical divider" data-inject-svg />
+        <img class="bg-primary-alt" src="images/dividers/divider-1.svg" alt="graphical divider" data-inject-svg />
        </div>
        <div class="divider">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="96px" viewBox="0 0 100 100" version="1.1" preserveAspectRatio="none" class="injected-svg bg-primary-alt" data-src="https://amer6693.github.io/images/dividers/divider-1.svg">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="96px" viewBox="0 0 100 100" version="1.1" preserveAspectRatio="none" class="injected-svg bg-primary-alt" data-src="images/dividers/divider-1.svg">
      <path d="M0,0 C40,33 66,52 75,52 C83,52 92,33 100,0 L100,100 L0,100 L0,0 Z"></path>
 </svg>
        </div>
@@ -173,14 +173,14 @@
           
 	</div>
      <div class="divider bg-primary-alt py-0">
-        <img class="bg-primary" src="https://amer6693.github.io/images/dividers/divider-3.svg" alt="divider graphic" data-inject-svg />
+        <img class="bg-primary" src="images/dividers/divider-3.svg" alt="divider graphic" data-inject-svg />
      </div>
             
     </section>
 
     <section class="bg-primary py-0">
       <div class="divider bg-primary-alt py-0">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="96px" viewBox="0 0 100 100" version="1.1" preserveAspectRatio="none" class="injected-svg bg-primary" data-src="https://amer6693.github.io/images/dividers/divider-3.svg">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="96px" viewBox="0 0 100 100" version="1.1" preserveAspectRatio="none" class="injected-svg bg-primary" data-src="images/dividers/divider-3.svg">
      <path d="M0,0 C6.83050094,50 15.1638343,75 25,75 C41.4957514,75 62.4956597,0 81.2456597,0 C93.7456597,0 99.9971065,0 100,0 L100,100 L0,100"></path>
 </svg>
      </div>    
