--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Invest in the Malaysian Financial Markets">
 <link rel="shortcut icon" href="favicon.ico">
-    <link href="https://amer6693.github.io/Important Stuff/loader-typing.css" rel="stylesheet" type="text/css" media="all">
-    <link href="https://amer6693.github.io/Important Stuff/theme-coworking.css" rel="stylesheet" type="text/css" media="all">
-    <link href="https://amer6693.github.io/Important Stuff/custom.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="preload" as="font" href="https://amer6693.github.io/Important Stuff/fonts/Inter-UI-upright.var.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" as="font" href="https://amer6693.github.io/Important Stuff/fonts/Inter-UI.var.woff2" type="font/woff2" crossorigin="anonymous">
+    <link href="https://amer6693.github.io/Important-Stuff/loader-typing.css" rel="stylesheet" type="text/css" media="all">
+    <link href="https://amer6693.github.io/Important-Stuff/theme-coworking.css" rel="stylesheet" type="text/css" media="all">
+    <link href="https://amer6693.github.io/Important-Stuff/custom.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="preload" as="font" href="https://amer6693.github.io/Important-Stuff/fonts/Inter-UI-upright.var.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="https://amer6693.github.io/Important-Stuff/fonts/Inter-UI.var.woff2" type="font/woff2" crossorigin="anonymous">
   
 
   
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark" data-overlay="" data-sticky="top" style="max-width: 1903px; top: 0px;">
         <div class="container col">
           <div class="px-1 col-6 col-sm-5 col-md-4 col-lg-3 col-xl-3">
-            <img src="https://amer6693.github.io/Important Stuff/bnm_logo_L.png" alt="BNM Logo">
+            <img src="https://amer6693.github.io/Important-Stuff/bnm_logo_L.png" alt="BNM Logo">
           </div>
 
           <button class="navbar-toggler order-last" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -477,40 +477,40 @@
 </svg>
     </a>
     <!-- Required vendor scripts (Do not remove) -->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/jquery.min.js"></script>
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/popper.min.js"></script>
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/bootstrap.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/jquery.min.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/popper.min.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/bootstrap.js"></script>
 
     <!-- Optional Vendor Scripts (Remove the plugin script here and comment initializer script out of index.js if site does not use that feature) -->
 
     <!-- Flatpickr (calendar/date/time picker UI) -->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/flatpickr.min.js"></script> 
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/flatpickr.min.js"></script> 
     <!-- Flickity (handles touch enabled carousels and sliders) -->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/flickity.pkgd.min.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/flickity.pkgd.min.js"></script>
     <!-- Isotope (masonry layouts and filtering) -->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/isotope.pkgd.min.js"></script>
     <!-- jarallax (parallax effect and video backgrounds) -->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/jarallax.min.js"></script>
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/jarallax-video.min.js"></script>
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/jarallax-element.min.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/jarallax.min.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/jarallax-video.min.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/jarallax-element.min.js"></script>
     <!-- AOS (Animate On Scroll - animates elements into view while scrolling down) -->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/aos.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/aos.js"></script>
     <!-- Ion rangeSlider (flexible and pretty range slider elements) -->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/ion.rangeSlider.min.js"></script> 
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/ion.rangeSlider.min.js"></script> 
     <!-- jQuery Countdown (displays countdown text to a specified date) -->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/jquery.countdown.min.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/jquery.countdown.min.js"></script>
     <!-- ScrollMonitor (manages events for elements scrolling in and out of view) -->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/scrollMonitor.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/scrollMonitor.js"></script>
     <!-- SVGInjector (replaces img tags with SVG code to allow easy inclusion of SVGs with the benefit of inheriting colors and styles)-->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/svg-injector.umd.production.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/svg-injector.umd.production.js"></script>
     <!-- Smooth scroll (animation to links in-page)-->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/smooth-scroll.polyfills.min.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/smooth-scroll.polyfills.min.js"></script>
     <!-- Plyr (unified player for Video, Audio, Vimeo and Youtube) -->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/plyr.polyfilled.min.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/plyr.polyfilled.min.js"></script>
     <!-- Prism (displays formatted code boxes) -->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/prism.js"></script> 
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/prism.js"></script> 
     <!-- Required theme scripts (Do not remove) -->
-    <script type="text/javascript" src="https://amer6693.github.io/Important Stuff/theme.js"></script>
+    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/theme.js"></script>
     <!-- Removes page load animation when window is finished loading -->
     <script type="text/javascript">
       window.addEventListener("load", function () {    document.querySelector('body').classList.add('loaded');  });
@@ -528,7 +528,7 @@
     <!-- Typed text (animated typing effect)-->
 <!--    <script type="text/javascript" src="../2020//js/typed.min.js"></script>-->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async="" src="https://amer6693.github.io/Important Stuff/js"></script>
+<script async="" src="https://amer6693.github.io/Important-Stuff/js"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
