--- a/About.html
+++ b/About.html
@@ -90,11 +90,11 @@
         </div>
       </div>
 
- 
-        <div class="divider">
-        <img class="bg-primary-alt" src="https://amer6693.github.io/about-page/images/dividers/divider-1.svg" alt="graphical divider" data-inject-svg />
+       <div class="divider">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="96px" viewBox="0 0 100 100" version="1.1" preserveAspectRatio="none" class="injected-svg bg-primary-alt flip-x" data-src="https://amer6693.github.io/images/dividers/divider-1.svg">
+     <path d="M0,0 C40,33 66,52 75,52 C83,52 92,33 100,0 L100,100 L0,100 L0,0 Z"></path>
+</svg>
        </div>
-
 
     </section>
 
@@ -142,11 +142,7 @@
           </div>
         </div>
           
-	</div>
-     <div class="divider bg-primary-alt py-0">
-        <img class="bg-primary" src="https://amer6693.github.io/about-page/images/dividers/divider-3.svg" alt="divider graphic" data-inject-svg />
-     </div>
-            
+ 
     </section>
     <div class="divider bg-primary-alt py-0" id="pt1">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="96px" viewBox="0 0 100 100" version="1.1" preserveAspectRatio="none" class="injected-svg bg-primary flip-x" data-src="https://amer6693.github.io/images/dividers/divider-3.svg">
