--- a/Guidance.html
+++ b/Guidance.html
@@ -115,7 +115,7 @@
       <div class="container" >
         <div class="card card-body">
           <div class="flex-grow-1 mb-3">
-            <h5 class="h5"><Before applying to the Sandbox</h5>
+            <h5 class="h5">Before applying to the Sandbox</h5>
             <p></p>
             <div><ul>
               <li>Finalise the business model</li> 
