--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     <!-- Flatpickr (calendar/date/time picker UI) -->
     <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/flatpickr.min.js"></script> 
     <!-- Flickity (handles touch enabled carousels and sliders) -->
-    <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/flickity.pkgd.min.js"></script>
+    <script type="text/javascript" src="js/flickity.pkgd.min.js"></script>
     <!-- Isotope (masonry layouts and filtering) -->
     <script type="text/javascript" src="https://amer6693.github.io/Important-Stuff/isotope.pkgd.min.js"></script>
     <!-- jarallax (parallax effect and video backgrounds) -->
