--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
     
-    <title>BNM Regulatory Sandbox</title>
+    <title>Regulatory Sandbox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Invest in the Malaysian Financial Markets">
 <link rel="shortcut icon" href="favicon.ico">
@@ -91,7 +91,7 @@
      <div class="container py-0">
         <div class="row py-5 text-center justify-content-center aos-init aos-animate" data-aos="fade-up">
           <div class="col">
-		   <h1 class="h1">BNM Regulatory Sandbox</h1>
+		   <h1 class="h1">Regulatory Sandbox</h1>
            <p class="lead px-5 mb-0">Bank Negara Malaysia seeks to provide a regulatory environment that is conducive for the deployment of fintech solutions. This includes reviewing and adapting regulatory requirements or procedures that may unintentionally inhibit innovation. Hence, the Sandbox was introduced in 2016 to enable innovation of fintech to be deployed and tested in a live environment, with specified parameters and timeframes. </p>
           </div>
         </div>
