remove fintech from Regulatory Sandbox

--- a/Guidance.html
+++ b/Guidance.html
@@ -119,7 +119,7 @@
             <p></p>
             <div><ul>
               <li>Finalise the business model</li> 
-              <li>Go through the<a href="https://www.bnm.gov.my/documents/20124/761691/pd_regulatorysandboxframework_Oct2016.pdf" target ="_blank"><strong> Fintech Regulatory Sandbox Framework</strong> </a></li>
+              <li>Go through the<a href="https://www.bnm.gov.my/documents/20124/761691/pd_regulatorysandboxframework_Oct2016.pdf" target ="_blank"><strong> Regulatory Sandbox Framework</strong> </a></li>
               <li>Determine if the business activity is <a href="https://amer6693.github.io/Regulations.html" target="_blank">regulated by BNM</a> and face any regulatory impediments</li>
             </ul></div>
           </div>
