--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <div><a href="https://www.bnm.gov.my/web/guest/financial-market-infrastructure" class="hover-arrow">Financial Market Infrastructure</a></div>
             <div><a href="https://www.bnm.gov.my/web/guest/human-capital-development" class="hover-arrow">Human Capital Development</a></div>
             <div><a href="https://www.bnm.gov.my/web/guest/financial-safety-net" class="hover-arrow">Financial Safety Net</a></div>
-            <div><a href="" class="hover-arrow">Fintech Regulatory Sandbox</a></div>
+            <div><a href="" class="hover-arrow">The Regulatory Sandbox</a></div>
           </div>
         </div>
       </div>
