--- a/About.html
+++ b/About.html
@@ -85,7 +85,7 @@
           <div class="col">
 		   <h1 class="h1">About the Regulatory Sandbox</h1>
 		   <p style="font-size: 18px;">As advances in financial technology have led to the introduction of new business models and solutions, Bank Negara Malaysia seeks to provide a regulatory environment that is conducive for the deployment of fintech solutions.</p>
-        <p style="font-size: 18px;">The Fintech Regulatory Sandbox (“Sandbox”) is established to enable genuinely innovative fintech solutions be deployed and tested in a live environment, with the appropriate safeguards to manage risks.</p>
+        <p style="font-size: 18px;">The Regulatory Sandbox (“Sandbox”) is established to enable genuinely innovative fintech solutions be deployed and tested in a live environment, with the appropriate safeguards to manage risks.</p>
           </div>
         </div>
       </div>
