BNM sandbox application form in Word doc

--- a/About.html
+++ b/About.html
@@ -136,7 +136,7 @@
         <div class="col-12 col-md-6 col-lg-4" >
           <div class="card card-body">
             <div class="flex-grow-1 mb-3">
-              <h5 class="h5"><a href="https://www.bnm.gov.my/documents/20124/761691/appendices_sandboxframework.pdf" target="_blank"><p style="text-align: center;">Application Form</p></a></h5>
+              <h5 class="h5"><a href="/BNM_Sandbox_Application_Form.docx" download="BNM_Sandbox_Application_Form.docs"><p style="text-align: center;">Application Form</p></a></h5>
               <p></p>
             </div>
           </div>
