--- a/About.html
+++ b/About.html
@@ -84,8 +84,8 @@
         <div class="row text-center justify-content-center" data-aos="fade-up">
           <div class="col">
 		   <h1 class="h1">About the Regulatory Sandbox</h1>
-		   <p style="font-size: 18px;">As advances in financial technology have led to the introduction of new business models and solutions, Bank Negara Malaysia seeks to provide a regulatory environment that is conducive for the deployment of fintech solutions.</p>
-        <p style="font-size: 18px;">The Regulatory Sandbox (“Sandbox”) is established to enable genuinely innovative fintech solutions be deployed and tested in a live environment, with the appropriate safeguards to manage risks.</p>
+		   <p style="font-size: 18px;">As advances in financial technology have led to the introduction of new business models and solutions, the Sandbox seeks to encourage innovation and the delivery of financial services by granting regulatory flexibilities for fintech solutions with genuine value proposition to be experimented in a production or live environment.</p>
+        <p style="font-size: 18px;">Such flexibilities will be accompanied by appropriate safeguards to preserve financial stability and fair treatment to consumers.</p>
           </div>
         </div>
       </div>
