--- a/Guidance.html
+++ b/Guidance.html
@@ -85,7 +85,7 @@
         <div class="row text-center justify-content-center" data-aos="fade-up">
           <div class="col">
 		   <h1 class="h1">Sandbox Guidance to Potential Applicants</h1>
-		   <p class="lead px-5 mb-4">The guidance provided in this section seeks to facilitate better understanding of the general criteria assessed by the Bank to determine the eligibility of potential applicants to participate in BNM’s Regulatory Sandbox. Interested applicants should take note of this guidance accordingly.
+		   <p class="lead px-5 mb-4">The guidance provided in this section intends to provide interested applicants with a better general understanding of the criteria assessed by the Bank to determine eligibility for participation in the Sandbox and the overall Sandbox process.
           </div>
         </div>
       </div>
