--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <title>Regulatory Sandbox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Invest in the Malaysian Financial Markets">
+    <meta name="description" content="BNM Regulatory Sandbox">
 <link rel="shortcut icon" href="favicon.ico">
     <link href="Important-Stuff/loader-typing.css" rel="stylesheet" type="text/css" media="all">
     <link href="Important-Stuff/theme-coworking.css" rel="stylesheet" type="text/css" media="all">
@@ -92,7 +92,7 @@
         <div class="row py-5 text-center justify-content-center aos-init aos-animate" data-aos="fade-up">
           <div class="col">
 		   <h1 class="h1">Regulatory Sandbox</h1>
-           <p class="lead px-5 mb-0">Bank Negara Malaysia seeks to provide a regulatory environment that is conducive for the deployment of fintech solutions. This includes reviewing and adapting regulatory requirements or procedures that may unintentionally inhibit innovation. Hence, the Sandbox was introduced in 2016 to enable innovation of fintech to be deployed and tested in a live environment, with specified parameters and timeframes. </p>
+           <p class="lead px-5 mb-0">The Sandbox was launched by Bank Negara Malaysia (the Bank) in July 2016, to provide a regulatory environment that is conducive for the deployment of financial technology and facilitate overall innovation in the Malaysian financial sector. The Sandbox aims to enable innovative solutions to be tested in a live environment, with the appropriate safeguards.</p>
           </div>
         </div>
       </div>
