--- a/FAQ.html
+++ b/FAQ.html
@@ -706,26 +706,26 @@
             <h5>Useful Links</h5>
             <ul class="nav flex-column">
               <li class="nav-item ">
-                <a href="https://amer6693.github.io/About.html" target ="_blank" class="text-wrap nav-link">About BNM's Fintech Sandbox</a>
+                <a href="https://amer6693.github.io/About.html" target ="_blank" class="text-wrap nav-link">About the Regulatory Sandbox</a>
               </li>
 
               <li class="nav-item ">
-                <a href="https://amer6693.github.io/Guidance.html" target="_blank" class="text-wrap nav-link">Application Guidance for Potential Applicants</a>
+                <a href="https://amer6693.github.io/Guidance.html" target="_blank" class="text-wrap nav-link">Sandbox Application Guidance</a>
               </li>
 
               <li class="nav-item ">
-                <a href="https://amer6693.github.io/Regulations.html" class="text-wrap nav-link">Overview of regulations</a>
+                <a href="https://amer6693.github.io/Regulations.html" target ="_blank" class="text-wrap nav-link">Understanding regulations</a>
               </li>
               
               <li class="nav-item ">
-                <a href="https://amer6693.github.io/FAQ.html" class="text-wrap nav-link">FAQ</a>
+                <a href="https://amer6693.github.io/FAQ.html" target ="_blank" class="text-wrap nav-link">Frequently Asked Questions (FAQ)</a>
               </li>
               
               <li class="nav-item ">
-                <a href="https://fintechbooster.com.my/" target ="blank"class="text-wrap nav-link">Fintech Booster</a>
+                <a href="https://fintechbooster.com.my/" target ="_blank" class="text-wrap nav-link">MDEC's Fintech Booster</a>
               </li> 
               <li class="nav-item ">
-                <a href="https://fintechnews.my/" target ="blank"class="text-wrap nav-link">Fintech News Malaysia</a>
+                <a href="https://fintechnews.my/" target ="_blank" class="text-wrap nav-link">Fintech News Malaysia</a>
               </li>             
             </ul>
           </div>
