--- a/Guidance.html
+++ b/Guidance.html
@@ -456,31 +456,31 @@
               </li>
             </ul>
           </div>
-          <div class="mb-3 col-sm-8 col-md-6 col-lg">
+          <div class="mb-3 col-sm-8 col-md-6 col-lg justify-content-center">
             <h5>Useful Links</h5>
             <ul class="nav flex-column">
               <li class="nav-item ">
-                <a href="https://amer6693.github.io/About page.html" target ="_blank" class="text-wrap nav-link">About BNM's Fintech Sandbox</a>
+                <a href="https://amer6693.github.io/About.html" target ="_blank" class="text-wrap nav-link">About the Regulatory Sandbox</a>
               </li>
 
               <li class="nav-item ">
-                <a href="https://amer6693.github.io/Guidance.html" target="_blank" class="text-wrap nav-link">Application Guidance for Potential Applicants</a>
+                <a href="https://amer6693.github.io/Guidance.html" target="_blank" class="text-wrap nav-link">Sandbox Application Guidance</a>
               </li>
 
               <li class="nav-item ">
-                <a href="https://amer6693.github.io/Regulations.html" class="text-wrap nav-link">Overview of regulations</a>
+                <a href="https://amer6693.github.io/Regulations.html" target ="_blank" class="text-wrap nav-link">Understanding regulations</a>
               </li>
               
               <li class="nav-item ">
-                <a href="https://amer6693.github.io/FAQ.html" class="text-wrap nav-link">FAQ</a>
+                <a href="https://amer6693.github.io/FAQ.html" target ="_blank" class="text-wrap nav-link">Frequently Asked Questions (FAQ)</a>
               </li>
               
               <li class="nav-item ">
-                <a href="https://fintechbooster.com.my/" target ="blank"class="text-wrap nav-link">Fintech Booster</a>
-              </li>
+                <a href="https://fintechbooster.com.my/" target ="_blank" class="text-wrap nav-link">MDEC's Fintech Booster</a>
+              </li> 
               <li class="nav-item ">
-                <a href="https://fintechnews.my/" target ="blank"class="text-wrap nav-link">Fintech News Malaysia</a>
-              </li>
+                <a href="https://fintechnews.my/" target ="_blank" class="text-wrap nav-link">Fintech News Malaysia</a>
+              </li>             
             </ul>
           </div>
           <div class="mb-3 col-sm-8 col-md-6 col-lg">
