--- a/Guidance.html
+++ b/Guidance.html
@@ -13,7 +13,7 @@
     <link rel="preload" as="font" href="fonts/Inter-UI-upright.var.woff2" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" as="font" href="fonts/Inter-UI.var.woff2" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel="stylesheet" href="/Users/fdamer/Desktop/amer6693.github.io-1/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <!doctype html>
 
@@ -540,7 +540,7 @@
     <!-- Required theme scripts (Do not remove) -->
     <script type="text/javascript" src="https://amer6693.github.io/js/theme.js"></script>
     <!-- Removes page load animation when window is finished loading -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="/Users/fdamer/Desktop/amer6693.github.io-1/script.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="script.js"></script>
     <!-- partial -->
     <script type="text/javascript">
       window.addEventListener("load", function () {    document.querySelector("body").classList.add("loaded");  });
