--- a/Guidance.html
+++ b/Guidance.html
@@ -111,7 +111,7 @@
         <div class="row justify-content-center text-center">
           <div class="row">
             <h2 class="mx-lg-8">Overview of Sandbox Application Process</h2>
-            <p style="color: red;">[to fix this section]</p>
+            <p style="color: red;">[to fix animation on this section]</p>
           </div>
         </div>
       </div>
