--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
     <!-- Flatpickr (calendar/date/time picker UI) -->
     <script type="text/javascript" src="Important-Stuff/flatpickr.min.js"></script> 
     <!-- Flickity (handles touch enabled carousels and sliders) -->
-    <script type="text/javascript" src="Important-Stuff/flickity.pkgd.min.js"></script>
+    <script type="text/javascript" src="flickity.pkgd.min.js"></script>
     <!-- Isotope (masonry layouts and filtering) -->
     <script type="text/javascript" src="Important-Stuff/isotope.pkgd.min.js"></script>
     <!-- jarallax (parallax effect and video backgrounds) -->
